--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "framer-motion": "^12.23.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.0",
-    "swiper": "^11.2.10"
+    "swiper": "^11.2.10",
+      "lucide-react": "^0.541.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
